Top & Bottom 10 Registration_No, Patient_Name ,Department_Name, Total_Expense(), Mobile_Number

--- a/department_wise_patient_discount.ipynb
+++ b/department_wise_patient_discount.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +71,7 @@
     }
    ],
    "source": [
+    "# Top 10 patient with max added_amt \n",
     "patient_df_largest_ten = patient_df.nlargest(10, ['added_amt']) \n",
     "top_ten_added_amt_patient_df = patient_df_largest_ten[['patientname', 'added_amt']]\n",
     "print(top_ten_added_amt_patient_df.to_string(index= False))"
@@ -78,26 +79,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "first() missing 1 required positional argument: 'offset'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-037b24ee14b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgroup_by_department\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpatient_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"added_amt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"department\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"patientname\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'added_amt'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'max'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# print(pd.merge(group_by_department,patient_df,on='patientname'))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# df.sort_values('B').groupby('A').first()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup_by_department\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: first() missing 1 required positional argument: 'offset'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                    added_amt\n",
+      "department                                   \n",
+      "BONE AND JOINT HOSPITALS            361484.85\n",
+      "CARDIOLOGY                          802197.69\n",
+      "CHEST MEDICINE                      538582.52\n",
+      "CRITICAL CARE                      1259722.65\n",
+      "ENDOCRINOLOGY                       142439.00\n",
+      "ENT                                 371287.71\n",
+      "GASTROENTEROLOGY & G.I. ENDOSCOPY   884241.32\n",
+      "GENERAL SURGERY                     791468.72\n",
+      "GYNAECOLOGY                         149596.15\n",
+      "INTERNAL MEDICINE                  1528592.55\n",
+      "MINIMAL ACCESS SURGERY HOSPITAL     120068.00\n",
+      "NEPHROLOGY                          300590.62\n",
+      "NEURO SURGERY                      1143893.95\n",
+      "NEUROLOGY                           450341.15\n",
+      "ONCOLOGY                            596687.26\n",
+      "ORTHOPAEDIC                         701390.27\n",
+      "PEDIATIRICS                         289490.94\n",
+      "PLASTIC SURGERY                     676471.19\n",
+      "RADIOLOGY                           182559.55\n",
+      "UROLOGY                             627046.94\n"
      ]
     }
    ],
    "source": [
-    "group_by_department = patient_df.sort_values(\"added_amt\").groupby([\"department\",\"patientname\"]).agg({'added_amt':'max'}).first()\n",
-    "# print(pd.merge(group_by_department,patient_df,on='patientname'))\n",
-    "# df.sort_values('B').groupby('A').first()\n",
+    "# Top 10 departments with patient of max added_amt\n",
+    "group_by_department = patient_df.groupby(\"department\").agg({'added_amt':'max'})\n",
     "print(group_by_department)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " registrationno patientname       phone                         department   added_amt\n",
+      "            932        Dolf  9427130747                  INTERNAL MEDICINE  1528592.55\n",
+      "            685        Aron  8888999999                      CRITICAL CARE  1259722.65\n",
+      "            542        Judi  8888999999                      CRITICAL CARE  1146433.34\n",
+      "            791   Timotheus  9909062725                      NEURO SURGERY  1143893.95\n",
+      "            129        Opal  8888999999                      NEURO SURGERY  1121483.64\n",
+      "            122      Yasmin  9277653897                  INTERNAL MEDICINE  1001624.72\n",
+      "            463       Darya  9924009499                      CRITICAL CARE   927497.90\n",
+      "            798      Nanine  8888999999  GASTROENTEROLOGY & G.I. ENDOSCOPY   884241.32\n",
+      "            781        Burt  9909927427                      NEURO SURGERY   821912.11\n",
+      "            861      Vinnie  8888999999                         CARDIOLOGY   802197.69\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Top 10 Registration_No, Patient_Name ,Department_Name, Total_Expense(), Mobile_Number\n",
+    "patient_df_largest_ten = patient_df.nlargest(10, [\"added_amt\"]) \n",
+    "top_ten_added_amt_patient_df_phone = patient_df_largest_ten[[\"registrationno\", \"patientname\", \"phone\", \"department\", \"added_amt\"]]\n",
+    "print(top_ten_added_amt_patient_df_phone.to_string(index= False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " registrationno patientname       phone                         department  added_amt\n",
+      "            418  Antonietta  8888999999                         CARDIOLOGY        0.0\n",
+      "            435       Adler  9904114846                      NEURO SURGERY        0.0\n",
+      "            468       Chris  9898422357                        GYNAECOLOGY        0.0\n",
+      "            609   Kassandra  9925658300                      CRITICAL CARE        0.0\n",
+      "            618       Corey  9898989027                         CARDIOLOGY        0.0\n",
+      "            708   Alejandro  9426950320  GASTROENTEROLOGY & G.I. ENDOSCOPY        0.0\n",
+      "            787      Leonid  8735072672                        ORTHOPAEDIC        0.0\n",
+      "            923      Temple  9913311070                      CRITICAL CARE        0.0\n",
+      "            926      Maudie  9979931053                         CARDIOLOGY        0.0\n",
+      "            964      Jacqui  9924506015                      NEURO SURGERY        0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bottom 10 Registration_No, Patient_Name ,Department_Name, Total_Expense(), Mobile_Number\n",
+    "patient_df_smallest_ten = patient_df.nsmallest(10, [\"added_amt\"]) \n",
+    "bottom_ten_added_amt_patient_df_phone = patient_df_smallest_ten[[\"registrationno\", \"patientname\", \"phone\", \"department\", \"added_amt\"]]\n",
+    "print(bottom_ten_added_amt_patient_df_phone.to_string(index= False))"
    ]
   },
   {
