Added patient details dataframe by max age

--- a/department_wise_patient_discount.ipynb
+++ b/department_wise_patient_discount.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +175,311 @@
     "patient_df_smallest_ten = patient_df.nsmallest(10, [\"added_amt\"]) \n",
     "bottom_ten_added_amt_patient_df_phone = patient_df_smallest_ten[[\"registrationno\", \"patientname\", \"phone\", \"department\", \"added_amt\"]]\n",
     "print(bottom_ten_added_amt_patient_df_phone.to_string(index= False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>registrationno</th>\n",
+       "      <th>patientname</th>\n",
+       "      <th>age</th>\n",
+       "      <th>cityname</th>\n",
+       "      <th>districtname</th>\n",
+       "      <th>statename</th>\n",
+       "      <th>added_amt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>59</td>\n",
+       "      <td>Birk</td>\n",
+       "      <td>91</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>182829.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>671</th>\n",
+       "      <td>672</td>\n",
+       "      <td>Evelina</td>\n",
+       "      <td>87</td>\n",
+       "      <td>MANGROL</td>\n",
+       "      <td>JUNAGADH</td>\n",
+       "      <td>GUJARAT</td>\n",
+       "      <td>14555.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>147</td>\n",
+       "      <td>Windy</td>\n",
+       "      <td>87</td>\n",
+       "      <td>MANAVADAR</td>\n",
+       "      <td>Alwar</td>\n",
+       "      <td>Rajasthan</td>\n",
+       "      <td>176154.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234</th>\n",
+       "      <td>235</td>\n",
+       "      <td>Gilburt</td>\n",
+       "      <td>87</td>\n",
+       "      <td>HADVAD</td>\n",
+       "      <td>SURENDRANAGAR</td>\n",
+       "      <td>GUJARAT</td>\n",
+       "      <td>28144.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>220</td>\n",
+       "      <td>Bond</td>\n",
+       "      <td>87</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>88118.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>149</td>\n",
+       "      <td>Arnaldo</td>\n",
+       "      <td>87</td>\n",
+       "      <td>JAMNAGAR</td>\n",
+       "      <td>JAMNAGAR</td>\n",
+       "      <td>GUJARAT</td>\n",
+       "      <td>24685.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>324</td>\n",
+       "      <td>Jeanelle</td>\n",
+       "      <td>86</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>25386.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>150</td>\n",
+       "      <td>Kaitlyn</td>\n",
+       "      <td>86</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>11661.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>744</td>\n",
+       "      <td>Nev</td>\n",
+       "      <td>86</td>\n",
+       "      <td>SARVAD</td>\n",
+       "      <td>Alwar</td>\n",
+       "      <td>Rajasthan</td>\n",
+       "      <td>344723.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>396</td>\n",
+       "      <td>Lothario</td>\n",
+       "      <td>86</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>27535.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>716</th>\n",
+       "      <td>717</td>\n",
+       "      <td>Delphine</td>\n",
+       "      <td>85</td>\n",
+       "      <td>JUNAGADH</td>\n",
+       "      <td>JUNAGADH</td>\n",
+       "      <td>GUJARAT</td>\n",
+       "      <td>291971.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>122</td>\n",
+       "      <td>Yasmin</td>\n",
+       "      <td>84</td>\n",
+       "      <td>MITHAPUR</td>\n",
+       "      <td>JAMNAGAR</td>\n",
+       "      <td>GUJARAT</td>\n",
+       "      <td>1001624.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>275</td>\n",
+       "      <td>Dimitry</td>\n",
+       "      <td>84</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>109652.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>667</th>\n",
+       "      <td>668</td>\n",
+       "      <td>Pollyanna</td>\n",
+       "      <td>83</td>\n",
+       "      <td>BHESAN</td>\n",
+       "      <td>JUNAGADH</td>\n",
+       "      <td>GUJARAT</td>\n",
+       "      <td>119797.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>164</td>\n",
+       "      <td>Bourke</td>\n",
+       "      <td>82</td>\n",
+       "      <td>MORBI</td>\n",
+       "      <td>Alwar</td>\n",
+       "      <td>Rajasthan</td>\n",
+       "      <td>142709.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>614</th>\n",
+       "      <td>615</td>\n",
+       "      <td>Kyla</td>\n",
+       "      <td>82</td>\n",
+       "      <td>KALAWAD</td>\n",
+       "      <td>JAMNAGAR</td>\n",
+       "      <td>GUJARAT</td>\n",
+       "      <td>107557.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>399</td>\n",
+       "      <td>Tucker</td>\n",
+       "      <td>82</td>\n",
+       "      <td>PORBANDAR</td>\n",
+       "      <td>PORBANDAR</td>\n",
+       "      <td>GUJARAT</td>\n",
+       "      <td>45868.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>74</td>\n",
+       "      <td>Aube</td>\n",
+       "      <td>82</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>145172.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>514</th>\n",
+       "      <td>515</td>\n",
+       "      <td>Gustaf</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Bhopal</td>\n",
+       "      <td>Madhya Pradesh</td>\n",
+       "      <td>108515.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>986</th>\n",
+       "      <td>987</td>\n",
+       "      <td>Hetti</td>\n",
+       "      <td>81</td>\n",
+       "      <td>VISAVADAR</td>\n",
+       "      <td>JUNAGADH</td>\n",
+       "      <td>GUJARAT</td>\n",
+       "      <td>20226.72</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     registrationno patientname  age   cityname   districtname  \\\n",
+       "58               59        Birk   91     Bhopal         Bhopal   \n",
+       "671             672     Evelina   87    MANGROL       JUNAGADH   \n",
+       "146             147       Windy   87  MANAVADAR          Alwar   \n",
+       "234             235     Gilburt   87     HADVAD  SURENDRANAGAR   \n",
+       "219             220        Bond   87     Bhopal         Bhopal   \n",
+       "148             149     Arnaldo   87   JAMNAGAR       JAMNAGAR   \n",
+       "323             324    Jeanelle   86     Bhopal         Bhopal   \n",
+       "149             150     Kaitlyn   86     Bhopal         Bhopal   \n",
+       "743             744         Nev   86     SARVAD          Alwar   \n",
+       "395             396    Lothario   86     Bhopal         Bhopal   \n",
+       "716             717    Delphine   85   JUNAGADH       JUNAGADH   \n",
+       "121             122      Yasmin   84   MITHAPUR       JAMNAGAR   \n",
+       "274             275     Dimitry   84     Bhopal         Bhopal   \n",
+       "667             668   Pollyanna   83     BHESAN       JUNAGADH   \n",
+       "163             164      Bourke   82      MORBI          Alwar   \n",
+       "614             615        Kyla   82    KALAWAD       JAMNAGAR   \n",
+       "398             399      Tucker   82  PORBANDAR      PORBANDAR   \n",
+       "73               74        Aube   82     Bhopal         Bhopal   \n",
+       "514             515      Gustaf   81     Bhopal         Bhopal   \n",
+       "986             987       Hetti   81  VISAVADAR       JUNAGADH   \n",
+       "\n",
+       "          statename   added_amt  \n",
+       "58   Madhya Pradesh   182829.62  \n",
+       "671         GUJARAT    14555.81  \n",
+       "146       Rajasthan   176154.53  \n",
+       "234         GUJARAT    28144.47  \n",
+       "219  Madhya Pradesh    88118.40  \n",
+       "148         GUJARAT    24685.66  \n",
+       "323  Madhya Pradesh    25386.76  \n",
+       "149  Madhya Pradesh    11661.98  \n",
+       "743       Rajasthan   344723.53  \n",
+       "395  Madhya Pradesh    27535.66  \n",
+       "716         GUJARAT   291971.07  \n",
+       "121         GUJARAT  1001624.72  \n",
+       "274  Madhya Pradesh   109652.97  \n",
+       "667         GUJARAT   119797.31  \n",
+       "163       Rajasthan   142709.61  \n",
+       "614         GUJARAT   107557.37  \n",
+       "398         GUJARAT    45868.61  \n",
+       "73   Madhya Pradesh   145172.96  \n",
+       "514  Madhya Pradesh   108515.00  \n",
+       "986         GUJARAT    20226.72  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "patient_details_df = pd.read_csv('clean_files/clean_patient_details_dump.csv', header=0, delimiter=',')\n",
+    "patient_discharge_df = pd.read_csv('clean_files/clean_patient_discharge_details_dump.csv', header=0, delimiter=',')\n",
+    "patient_discharge_df['added_amt']=patient_discharge_df.iloc[:,11:19].sum(axis=1)\n",
+    "\n",
+    "# Registration_No, Patient_Name ,Age, City_Name, District_Name, Statename, Total_expense => By max age\n",
+    "# merged_df = pd.merge(patient_discharge_df, patient_details_df, on='registrationno',  how='left')\n",
+    "patient_discharge_df['age'] = patient_discharge_df.registrationno.map(patient_details_df.set_index(\"registrationno\")['age'])\n",
+    "patient_discharge_max_age_df= patient_discharge_df[[\"registrationno\", \"patientname\",\"age\", \"cityname\", \"districtname\", \"statename\", \"added_amt\"]]\n",
+    "patient_discharge_max_age_df = patient_discharge_max_age_df.sort_values(by=['age'], ascending=False)\n",
+    "patient_discharge_max_age_df.head(20)"
    ]
   },
   {
