Modifications for retirieving patientname with max added amt grouping by dept

--- a/patient_wise_dashboard.ipynb
+++ b/patient_wise_dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                    added_amt\n",
+      "['registrationno', 'patientname', 'cityname', 'districtname', 'statename', 'phone', 'admitdatetime', 'dischargedatetime', 'company_name', 'department', 'discountamount', 'billamount', 'room_tariff', 'pharmacy', 'investigations', 'bedside_procedures', 'physiotherapy', 'surgeries', 'consumables', 'doctor_consultations', 'added_amt']\n",
+      "[[                                    added_amt\n",
       "department                                   \n",
       "BONE AND JOINT HOSPITALS            361484.85\n",
       "CARDIOLOGY                          802197.69\n",
@@ -74,13 +75,18 @@
       "PEDIATIRICS                         289490.94\n",
       "PLASTIC SURGERY                     676471.19\n",
       "RADIOLOGY                           182559.55\n",
-      "UROLOGY                             627046.94\n"
+      "UROLOGY                             627046.94, 'patientname']]\n"
      ]
     }
    ],
    "source": [
     "# Top 10 departments with patient of max added_amt\n",
-    "group_by_department = patient_discharge_df.groupby(\"department\").agg({'added_amt':'max'})\n",
+    "print(list(patient_discharge_df))\n",
+    "x = patient_discharge_df[[\"registrationno\",\"patientname\",\"added_amt\"]]\n",
+    "x.head()\n",
+    "# select max(salary) as maxsal, department as dept \n",
+    "#           from emp group by department\n",
+    "group_by_department = [[patient_discharge_df.groupby(\"department\").agg({'added_amt':'max'}), \"patientname\"]]\n",
     "print(group_by_department)"
    ]
   },
