Optimized dashboard code and renamed patientname column to patientcount

--- a/department_wise_dashboard.ipynb
+++ b/department_wise_dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,12 @@
     "patient_df = pd.read_csv('clean_files/clean_patient_discharge_details_dump.csv', header=0, delimiter=',')\n",
     "\n",
     "# added_amt column consists of sum of all the expenses incurred by a patient\n",
-    "patient_df['added_amt']=patient_df.iloc[:,11:19].sum(axis=1)\n",
+    "patient_df['added_amt']=patient_df.iloc[:,11:20].sum(axis=1)\n",
     "\n",
     "# Group by department wise with sum of 'added_amt', count of 'patientname' and sum of 'discountamount'\n",
-    "group_by_department_df = patient_df.groupby(\"department\").agg({'added_amt':'sum','patientname':'count','discountamount':'sum'})\n",
-    "\n",
+    "group_by_department_df = patient_df.groupby(\"department\").agg( added_amt = pd.NamedAgg(column='added_amt', aggfunc='sum'),\n",
+    "                                                               patient_count = pd.NamedAgg(column='patientname', aggfunc='count'),\n",
+    "                                                               discountamount = pd.NamedAgg(column='discountamount', aggfunc='sum'),)\n",
     "# Export to csv\n",
     "group_by_department_df.reset_index().to_csv('dashboards/department/department_wise.csv',encoding='utf-8', index=False)\n"
    ]
