--- a/powerplay_wise_dahboard.ipynb
+++ b/powerplay_wise_dahboard.ipynb
@@ -2,173 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>registrationno</th>\n",
-       "      <th>age</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>cityname</th>\n",
-       "      <th>districtname</th>\n",
-       "      <th>statename</th>\n",
-       "      <th>admitdatetime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>800</th>\n",
-       "      <td>801</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>DHORAJI</td>\n",
-       "      <td>Alwar</td>\n",
-       "      <td>Rajasthan</td>\n",
-       "      <td>2014-12-05 23:03:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>796</th>\n",
-       "      <td>797</td>\n",
-       "      <td>44</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>DIU.</td>\n",
-       "      <td>DIU</td>\n",
-       "      <td>DAMAN &amp; DIU</td>\n",
-       "      <td>2014-12-05 19:50:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>986</th>\n",
-       "      <td>987</td>\n",
-       "      <td>81</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>VISAVADAR</td>\n",
-       "      <td>JUNAGADH</td>\n",
-       "      <td>GUJARAT</td>\n",
-       "      <td>2014-12-05 19:25:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>967</th>\n",
-       "      <td>968</td>\n",
-       "      <td>67</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Bhopal</td>\n",
-       "      <td>Bhopal</td>\n",
-       "      <td>Madhya Pradesh</td>\n",
-       "      <td>2014-12-05 19:15:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>795</th>\n",
-       "      <td>796</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>LODHIKA</td>\n",
-       "      <td>Alwar</td>\n",
-       "      <td>Rajasthan</td>\n",
-       "      <td>2014-12-05 18:01:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>913</th>\n",
-       "      <td>914</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>JAMKANDORNA</td>\n",
-       "      <td>Alwar</td>\n",
-       "      <td>Rajasthan</td>\n",
-       "      <td>2014-12-05 13:50:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>912</th>\n",
-       "      <td>913</td>\n",
-       "      <td>70</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>MORBI</td>\n",
-       "      <td>Alwar</td>\n",
-       "      <td>Rajasthan</td>\n",
-       "      <td>2014-12-05 13:31:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>793</th>\n",
-       "      <td>794</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Bhopal</td>\n",
-       "      <td>Bhopal</td>\n",
-       "      <td>Madhya Pradesh</td>\n",
-       "      <td>2014-12-05 11:59:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>930</th>\n",
-       "      <td>931</td>\n",
-       "      <td>68</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>MORBI</td>\n",
-       "      <td>Alwar</td>\n",
-       "      <td>Rajasthan</td>\n",
-       "      <td>2014-12-05 11:06:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>971</th>\n",
-       "      <td>972</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>GONDAL</td>\n",
-       "      <td>Alwar</td>\n",
-       "      <td>Rajasthan</td>\n",
-       "      <td>2014-12-05 09:40:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     registrationno  age  gender     cityname districtname       statename  \\\n",
-       "800             801    8    Male      DHORAJI        Alwar       Rajasthan   \n",
-       "796             797   44    Male         DIU.          DIU     DAMAN & DIU   \n",
-       "986             987   81    Male    VISAVADAR     JUNAGADH         GUJARAT   \n",
-       "967             968   67    Male       Bhopal       Bhopal  Madhya Pradesh   \n",
-       "795             796   20    Male      LODHIKA        Alwar       Rajasthan   \n",
-       "913             914   12    Male  JAMKANDORNA        Alwar       Rajasthan   \n",
-       "912             913   70  Female        MORBI        Alwar       Rajasthan   \n",
-       "793             794   48  Female       Bhopal       Bhopal  Madhya Pradesh   \n",
-       "930             931   68  Female        MORBI        Alwar       Rajasthan   \n",
-       "971             972    3    Male       GONDAL        Alwar       Rajasthan   \n",
-       "\n",
-       "           admitdatetime  \n",
-       "800  2014-12-05 23:03:00  \n",
-       "796  2014-12-05 19:50:00  \n",
-       "986  2014-12-05 19:25:00  \n",
-       "967  2014-12-05 19:15:00  \n",
-       "795  2014-12-05 18:01:00  \n",
-       "913  2014-12-05 13:50:00  \n",
-       "912  2014-12-05 13:31:00  \n",
-       "793  2014-12-05 11:59:00  \n",
-       "930  2014-12-05 11:06:00  \n",
-       "971  2014-12-05 09:40:00  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Script executes for only first 7 days of the month\n"
+     ]
     }
    ],
    "source": [
@@ -176,7 +18,7 @@
     "import datetime, time\n",
     "\n",
     "current_day = datetime.datetime.now().strftime(\"%d\")\n",
-    "if (current_day in [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\",\"12\",\"16\"]):\n",
+    "if (current_day in [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\"]):\n",
     "    patient_discharge_df = pd.read_csv('clean_files/clean_patient_discharge_details_dump.csv', header=0, delimiter=',')\n",
     "    patient_details_df = pd.read_csv('clean_files/clean_patient_details_dump.csv', header=0, delimiter=',')\n",
     "    \n",
@@ -195,36 +37,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yes\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "current_day = datetime.datetime.now().strftime(\"%d\")\n",
-    "if (current_day in [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\",\"11\"]):\n",
-    "    # age, gender, admitdate should be current month, discharge date (last 3 months) [1st 7 days of month]\n",
-    "    print(\"yes\") \n",
-    "else:\n",
-    "    print(\"Script wont execute\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "current_day = datetime.datetime.now().strftime(\"%d\")\n",
-    "if (current_day in [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\",\"12\",\"16\"]):\n",
+    "if (current_day in [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\"]):\n",
+    "    \n",
+    "    # registration, opdate(order by desc), patientname, age, city, district -(50 records)\n",
+    "    outpatient_details_df = pd.read_csv('clean_files/clean_outpatient_details_dump.csv', header=0, delimiter=',')\n",
+    "    patient_discharge_details_df = pd.read_csv('clean_files/clean_patient_discharge_details_dump.csv', header=0, delimiter=',')\n",
+    "    \n",
+    "    result_df = pd.merge(outpatient_details_df, patient_discharge_details_df[[\"registrationno\",\"cityname\",\"districtname\",\"statename\"]], on='registrationno')\n",
+    "    result_df = result_df[[\"registrationno\",\"opdate\",\"patname\",\"cityname\",\"districtname\",\"statename\"]]\n",
+    "    result_df['opdate'] =  pd.to_datetime(result_df['opdate'])\n",
+    "    result_df = result_df.sort_values(by=['opdate'], ascending=False).head(50)\n",
+    "    \n",
+    "    # Export to csv\n",
+    "    result_df.to_csv('dashboards/powerplay/latest_50_opdate_wise.csv',encoding='utf-8', index=False)\n",
+    "else:\n",
+    "    print(\"Script executes for only first 7 days of the month\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "current_day = datetime.datetime.now().strftime(\"%d\")\n",
+    "if (current_day in [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\"]):\n",
     "    outpatient_details_df = pd.read_csv('clean_files/clean_outpatient_details_dump.csv', header=0, delimiter=',')\n",
     "    patient_discharge_details_df = pd.read_csv('clean_files/clean_patient_discharge_details_dump.csv', header=0, delimiter=',')\n",
     "    \n",
@@ -246,7 +92,7 @@
    "outputs": [],
    "source": [
     "current_day = datetime.datetime.now().strftime(\"%d\")\n",
-    "if (current_day in [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\",\"12\",\"16\"]):\n",
+    "if (current_day in [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\"]):\n",
     "    outpatient_details_df = pd.read_csv('clean_files/clean_outpatient_details_dump.csv', header=0, delimiter=',')\n",
     " \n",
     "    #department group by, sum of amount\n",
@@ -264,7 +110,7 @@
    "source": [
     "\n",
     "current_day = datetime.datetime.now().strftime(\"%d\")\n",
-    "if (current_day in [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\",\"12\",\"16\"]):\n",
+    "if (current_day in [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\"]):\n",
     "    outpatient_details_df = pd.read_csv('clean_files/clean_outpatient_details_dump.csv', header=0, delimiter=',')\n",
     " \n",
     "    # status group by, sum of amount\n",
